--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "proyecto",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bignumber.js": "^9.0.0",
     "body-parser": "^1.20.1",
@@ -16,6 +17,7 @@
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
     "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
@@ -25,6 +27,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "finalhandler": "^1.2.0",
     "foreachasync": "^3.0.0",
     "forwarded": "^0.2.0",
