--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "proyecto",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
@@ -53,6 +53,7 @@
     "minimist": "^1.2.8",
     "ms": "^2.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.1",
     "negotiator": "^0.6.3",
     "neo-async": "^2.6.2",
     "object-inspect": "^1.12.3",
