--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
+    "@types/react-bootstrap": "^0.32.33",
     "@types/react-dom": "18.2.5",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
@@ -22,7 +23,9 @@
     "md5": "^2.3.0",
     "next": "13.4.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.16.0",
     "typescript": "5.1.3",
     "universal-cookie": "^6.1.1"
   }
