Implementado JWT usando cookies del cliente

--- a/backend/.env
+++ b/backend/.env
@@ -9,6 +9,8 @@ DB_NAME=proyectorecti
 DB_USER=root
 DB_PASSWORD=''
 
+TOKEN_SECRET='yoursecret'
+
 #DB_HOST='34.176.134.58'
 #DB_NAME='proyectorecti'
 #DB_USER='root'
