--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cookie-signature": "^1.0.6",
     "core-util-is": "^1.0.3",
     "cors": "^2.8.5",
@@ -44,6 +45,7 @@
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
     "isarray": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
