--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=juanaymap_proyectorecti
 sonar.organization=juanaymap
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=ProyectoRecti
-#sonar.projectVersion=1.0
+sonar.projectName=ProyectoRecti
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
