--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,42 @@
 {
-  "name": "prueba",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-bootstrap": "^0.32.33",
-    "@types/react-dom": "18.2.5",
-    "axios": "^1.5.0",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.6",
+    "@types/node": "20.5.7",
+    "@vercel/postgres": "^0.5.0",
+    "autoprefixer": "10.4.15",
+    "axios": "^1.6.1",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "md5": "^2.3.0",
-    "next": "13.4.6",
+    "clsx": "^2.0.0",
+    "next": "^14.0.0",
+    "postcss": "8.4.31",
     "react": "18.2.0",
-    "react-bootstrap": "^2.9.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.16.0",
-    "typescript": "5.1.3",
-    "universal-cookie": "^6.1.1"
+    "react-reactive-form": "^2.0.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.14",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^14.0.0",
+    "prettier": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
