--- a/backend/package.json
+++ b/backend/package.json
@@ -86,7 +86,8 @@
         "utils-merge": "^1.0.1",
         "vary": "^1.1.2",
         "walk": "^2.3.15",
-        "wordwrap": "^1.0.0"
+        "wordwrap": "^1.0.0",
+        "xlsx": "^0.18.5"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
