--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "clsx": "^2.0.0",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "next": "^14.0.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -31,6 +33,7 @@
     "react-router-dom": "^6.18.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.2"
   },
   "devDependencies": {
