--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
     "next": "^14.0.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -33,11 +34,14 @@
     "react-router-dom": "^6.18.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "use-deep-compare-effect": "^1.8.1",
     "xlsx": "^0.18.5",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.14.202",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "dotenv": "^16.3.1",
